Fixed NavBar not aligned

--- a/src/components/NavBar/navBar.module.css
+++ b/src/components/NavBar/navBar.module.css
@@ -8,6 +8,7 @@
     z-index: 5;
     background-color: #fff;
     width: 100%;
+    justify-content: space-between;
 }
 
 .logo{ 
@@ -196,6 +197,7 @@
         top: 0;
         position: sticky;
         z-index: 10000;
+        width: 100%;
     }
 
     .logo{
